# iTekon-usb

./: CMakeLists.txt  README.md  clean.sh  iTekon-test  iTekon-test.c  test_1.txt  wm.txt
lib/: CMakeLists.txt  iTekon-usb.c  iTekon-usb.c.autosave  iTekon_usb.c  iTekon_usb.h  libusb-1.0.a-all  libusb-1.0.a-i386  libusb-1.0.a-noudev  libusb.h
